--- a/prj/sdp-ck1z.ioc
+++ b/prj/sdp-ck1z.ioc
@@ -42,7 +42,7 @@ NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.UART5_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 PA15.GPIOParameters=GPIO_Speed,GPIO_Label
-PA15.GPIO_Label=ADXL355_CS
+PA15.GPIO_Label=AD74416H_CS
 PA15.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA15.Locked=true
 PA15.Signal=GPIO_Output
